<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.bookmark.BookMarkFragment">

    <ImageButton
        android:id="@+id/btn_filter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="#00000000"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_filter_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/book_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:overScrollMode="never"
        android:scrollbarSize="2dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_editable_book" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/bookmark_empty_msg"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_filter"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <ImageButton
            android:id="@+id/btn_hide"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_expand_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/filter_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:checkedButton="@+id/rb_title"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_title" />

            <RadioButton
                android:id="@+id/rb_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_isbn" />

            <RadioButton
                android:id="@+id/rb_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_price" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>